# mail_classification_model

./: .gitignore  README.md  config.yaml  pyproject.toml  requirements.txt  setup.py
data/: sample_emails.csv  synthetic_emails.csv
examples/: example_email.txt
models/: mail_classifier.joblib
reports/: training_metrics.json
scripts/: generate_synthetic_dataset.py
src/mail_classifier/: __init__.py  cli.py  data.py  features.py  model.py  preprocessing.py  schemas.py
tests/: test_data.py  test_features.py  test_preprocessing.py
