[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mail-classification-model"
version = "0.1.0"
description = "Advanced email classification model with text and email-risk features."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "joblib>=1.3",
  "numpy>=1.24",
  "pandas>=2.0",
  "PyYAML>=6.0",
  "scikit-learn>=1.3"
]

[project.optional-dependencies]
dev = ["pytest>=7.4", "ruff>=0.5"]

[project.scripts]
mail-classifier = "mail_classifier.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

